--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
-requests
-scikit-learn
-numpy
-pandas
-joblib
-gunicorn
+Flask==2.3.3
+requests==2.31.0
+joblib==1.3.2
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+gunicorn==21.2.0
